<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_workout"
            android:icon="@drawable/ic_baseline_fitness_center_24px"
            android:title="@string/nav_workout" />
        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/ic_baseline_local_dining_24px"
            android:title="@string/nav_food" />
        <item
            android:id="@+id/nav_social"
            android:icon="@drawable/ic_baseline_people_24px"
            android:title="@string/nav_social" />
        <item android:title="Other">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings"
                    android:title="@string/nav_settings" />
                <item
                    android:id="@+id/nav_account"
                    android:icon="@drawable/ic_user_account"
                    android:title="@string/nav_account" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_action_logout"
                    android:title="@string/nav_log_out" />
            </menu>
        </item>

    </group>


</menu>
