<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="?attr/backgroundcolor">

    <EditText
        android:id="@+id/etBezeichnung"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/Bezeichnung"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/cardbackground">
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etBeschreibung"
        android:layout_width="match_parent"
        android:layout_height="144dp"
        android:background="@android:color/transparent"
        android:ems="10"
        android:gravity="top|left"
        android:hint="@string/Beschreibung"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/cardbackground" />
    <EditText
        android:id="@+id/etSaetze"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/Saetze"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/cardbackground">
        <requestFocus />
    </EditText>
    <EditText
        android:id="@+id/etWdh"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/Wdh"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/cardbackground">
        <requestFocus />
    </EditText>
    <EditText
        android:id="@+id/etGwt"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/Gwt"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/cardbackground">
        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="153dp"
            android:layout_height="50dp"
            android:textSize="20dp"
            android:textColor="?attr/textcolor"
            android:gravity="center_vertical"
            android:text="Gruppe"/>

        <Spinner
            android:id="@+id/spinnerGruppe"
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:textColor="?attr/textcolor"
            android:background="?attr/backgroundcolor"/>
    </LinearLayout>


    <Button
        android:id="@+id/add_record"
        android:layout_width="112dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_record"
        android:background="@color/colorAccent"
        android:textColor="?attr/textcolor" />

</LinearLayout>

